@@ -7,7 +7,7 @@
 		<!-- Global debug grid -->
 
 		<control type="image">
-			<visible>Skin.HasSetting(DebugGrid)</visible>
+			<visible>!Skin.HasSetting(DebugGrid)</visible>
 			<posx>0</posx>
 			<posy>0</posy>
 			<width>1280</width>
@@ -16,6 +16,10 @@
 			<!--width>1920</width>
 			<height>1080</height>
 			<texture>special://skin/debuggrid1080.png</texture-->
+			<!--width>ScreenWidth</width>
+			<height>ScreenHeight</height>
+			<texture>special://skin/debuggrid1080.png</texture-->
+			<colordiffuse>0xffff9900</colordiffuse>
 		</control>
 
 		<!-- Window/Dialog debug -->
