@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="skin.confluence.hwy2015"
-  version="2.5.9.002"
+  version="2.5.9.003"
   name="Confluence - hwy2015 Mod by TheHighway"
   provider-name="Jezz_X, Team Kodi">
   <requires>
